# cockroach-csharp-npgsql-issue

./: README.md
cockroach-csharp-loader/: .dockerignore  Dockerfile  Program.cs  README.md  cockroach-csharp-loader.csproj  demo-cs.yaml
cockroach-rust-demo/: .dockerignore  Cargo.toml  Dockerfile  README.md  demo.yaml  review-csrs.sh
cockroach-rust-demo/src/: basic_sample.rs  main.rs
