[package]
name = "cockroach-rust-demo"
version = "0.1.0"
authors = ["redacted"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.18.1"
openssl = "0.10.30"
postgres-openssl = "0.4.0"
lipsum = "0.7"
uuid = { version = "0.8.1", features = [ "v4" ] }
